--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="title">Title</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="active">Active</string>
+    <string name="active_subscription">Active Subscription</string>
+    <string name="all">All</string>
+    <string name="expired_days_ago">Expired %1$s days ago</string>
+    <string name="expires_in_day">Expires in %1$s day</string>
+    <string name="expires_on_date">Expires on %1$s</string>
+    <string name="app">APP</string>
 </resources>
