--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,20 @@
     <string name="description_pay_to_park">Now you can pay your parking fees conveniently from your vehicle. Pay to Park automatically finds the nearest parking zone for you - all you have to do is select the desired parking duration. \n\nYour subscription expires on 03.11.24. You can extend your at any time.</string>
     <string name="parking_fee_description">pay for your parking fee \nfrom the confort of your vehicle</string>
     <string name="pay_to_park">Pay to park</string>
+    <string name="powerpass">PowerPass</string>
+    <string name="account">Account</string>
+    <string name="ambient_light">Ambient Light</string>
+    <string name="charging">Charging</string>
+    <string name="digital_dials_setup">Digital dials setup</string>
+    <string name="driver_mode">Driver Mode</string>
+    <string name="parkheater">Parkheater</string>
+    <string name="parking">Parking</string>
+    <string name="shop">Shop</string>
+    <string name="sound">Sound</string>
+    <string name="seats">Seats</string>
+    <string name="error_message">Error %1$s</string>
+    <string name="subscription_expires_extend">Your subscription expires on %1$s. You can extend your at any time</string>
+    <string name="subscription_in_progress">Subscription in progress</string>
+    <string name="automotive_not_available">Automotive not available</string>
 
 </resources>
